--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,4 +1,4 @@
-.btn, .btn-outline {
+.btn, .btn-outline , .btn-secondary {
   background-color: black;
   color: #fff;
   border: none;
@@ -14,6 +14,12 @@
   border: 1px solid #fff;
 }
 
+.btn-secondary {
+  background-color: #fff;
+  border: 1px solid rgb(240, 34, 34);
+  color: #000;
+
+}
 @media (max-width:500px) {
   .btn-outline, .btn {
     padding: 15px 20px;
