created the footer section -created a menu component -created a data.js folder

--- a/src/app/components/Features/style.module.css
+++ b/src/app/components/Features/style.module.css
@@ -12,6 +12,7 @@
 .features .title {
      font-size: 39px;
      font-weight: bold;
+     text-align: center;
 }
 .features .list {
     display: flex;
