--- a/src/app/App.css
+++ b/src/app/App.css
@@ -9,6 +9,7 @@
   font-size: 13px;
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
+  font-weight: 600;
 }
 .btn-outline {
   background-color: transparent;
@@ -17,7 +18,7 @@
 
 .btn-secondary {
   background-color: #fff;
-  border: 1px solid rgb(240, 34, 34);
+  border: 2px solid #000;
   color: #000;
 
 }
