--- a/src/app/components/PremiumPlans/style.module.css
+++ b/src/app/components/PremiumPlans/style.module.css
@@ -5,7 +5,8 @@
     align-items: center;
     color: #000;
     background-color: #eeeeee;
-    padding: 35px;
+    padding: 55px 35px;
+    font-family: Helvetica, sans-serif;
 
 }
 .PremiumPlans .Leadingtext {
@@ -137,6 +138,22 @@
   .linktext {
     font-size: 12px ;
     color: #000;
+  }
+
+  .studentdiscount {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    margin-top: 40px;
+    padding: 8px 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 8px #ccc;
+  }
+  .studentdiscount p {
+    font-size: 23px;
+    font-weight: bold;
   }
 
  
