--- a/src/app/Pages/Login/style.module.css
+++ b/src/app/Pages/Login/style.module.css
@@ -1,3 +1,10 @@
-.login {
-    background-color: brown;
+.logo-wrapper {
+     background-color: #ea1111;
+     width: 100%;
+     height: 92px;
+     text-align: center;
+}
+.logo-wrapper img {
+    margin: 0;
+    padding-top: 20px;
 }
