--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,4 +1,6 @@
-.btn, .btn-outline , .btn-secondary {
+
+
+.btn, .btn-outline , .btn-secondary, .btn-tertiary, .btn-login {
   background-color: black;
   /* display: block; */
   color: #fff;
@@ -7,7 +9,7 @@
   border-radius: 500px;
   cursor: pointer;
   font-size: 13px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Inter", sans-serif;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -17,10 +19,20 @@
 }
 
 .btn-secondary {
-  background-color: #fff;
-  border: 2px solid #000;
-  color: #000;
+  background-color: #1877F2;
+  /* border: 2px solid #000; */
+  color: #fff;
 
+}
+.btn-tertiary {
+  background: transparent;
+  border: 1px solid #878787;
+  color: #6A6A6A;
+
+}
+.btn-login {
+  background-color: #1ED760;
+  color: #000;
 }
 @media (max-width:500px) {
   .btn-outline, .btn {
@@ -28,6 +40,8 @@
     text-wrap: nowrap;
   }
 }
+
+
 
 .link-outline, .link{
   text-decoration: none;
@@ -54,7 +68,7 @@
   font-size: 14px;
   width: 165px;
   padding: 3px;
-}
+} 
 
 
 
