--- a/src/app/Pages/Login/style.module.css
+++ b/src/app/Pages/Login/style.module.css
@@ -1,10 +1,103 @@
-.logo-wrapper {
-     background-color: #ea1111;
-     width: 100%;
-     height: 92px;
-     text-align: center;
+
+
+.logo-wrapper, .main {
+     height: 60px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     padding: var(--app-padding);
+     padding-block: 20px;
+     border-bottom: 1px solid #d9dadc;
 }
 .logo-wrapper img {
     margin: 0;
-    padding-top: 20px;
+    
 }
+.main {
+    height: auto;
+    border-bottom: none;
+    flex-direction: column;
+    max-width: 470px;
+    width: 100%;
+    margin: auto;
+    gap: 10px;
+    padding-top: 40px;
+    color: #000;
+
+   
+}
+.main button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    opacity: 0.9;
+    font-family: "Inter", sans-serif;
+}
+.main button:hover {
+    opacity: 1;
+    transform: scale(1.01);
+}
+.divider {
+    height: 0px;
+    font-size: 14px;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid #D9DADC;
+    line-height: 0;
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+    
+}
+.divider span {
+    background-color: #fff;
+    padding: 5px 20px;
+    font-weight: 700;
+    font-family: "Inter", sans-serif;
+}
+.main p {
+    font-size: 17px;
+    font-weight: bold;
+    margin: 5px;
+    padding-bottom: 5px;
+    font-family: "Inter", sans-serif;
+    
+}
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+.forgot {
+    width: 100%;
+    display: block;
+    color: #000;
+    font-size: 16px;
+    font-family: Helvetica, sans-serif;
+    text-align: left; 
+    font-weight: 600;
+    padding-top: 5px;
+}
+.flex input:checked {
+    accent-color: #169b45 ;
+}
+.flex input[type='checkbox'] {
+    margin-right: 15px;
+    width: 20px;
+    height: 20px;
+}
+
+.flex > div {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+
